adjust modal table select all checkbox and checkbox sort

--- a/app/views/admin/admin/dashboard.html.erb
+++ b/app/views/admin/admin/dashboard.html.erb
@@ -334,7 +334,7 @@ $(function() {
           </li>
           <li class="archive">
               <a title="创建新培训计划" modal-type="training_plan" data-target="#quick_form" 
-                      data-toggle="modal" href="/ajax/form/training_plans/new">
+                      href="/ajax/form/training_plans/new">
                   <span class="shortcuts-icon iconfa-plane"></span>
                   <span class="shortcuts-label">创建培训计划</span>
               </a>
