--- a/app/views/admin/admin/course.html.erb
+++ b/app/views/admin/admin/course.html.erb
@@ -65,6 +65,7 @@
         <i class="iconfa-plus icon-white"></i> <%= t("course.all.new") %>
       </a>
       <a href="#myModal" data-toggle="modal" class="btn btn-warning"><i class="iconfa-download-alt icon-white"></i> <%= t("course.all.export") %></a>
+      <a href="<%= export_courses_path(format: 'csv', :export => "header") %>" data-toggle="modal" class="btn btn-warning"><i class="iconfa-download-alt icon-white"></i> <%= t("course.all.export_sample") %></a>
     </div>
 
     <h4 class="widgettitle"> <%= t("course.all.import_title") %></h4>
