--- a/app/views/training_plans/index.html.erb
+++ b/app/views/training_plans/index.html.erb
@@ -45,8 +45,8 @@
   </div>
   <div id="dashboard-right" class="span4">
     <div class="well">
-      <a title="创建新培训计划" modal-type="training_plan" data-target="#quick_form" 
-        data-toggle="modal" href="/ajax/form/training_plans/new" class="btn btn-primary">
+      <a title="创建新培训计划" modal-type="training_plan"
+          href="/ajax/form/training_plans/new" class="btn btn-primary">
         <i class="iconfa-plus icon-white"></i> 创建培训计划
       </a>
     </div>
