--- a/app/assets/stylesheets/style.default.css.erb
+++ b/app/assets/stylesheets/style.default.css.erb
@@ -1046,11 +1046,18 @@ right: -10px;
 .dataTables_scrollHead { background: #333; }
 .dataTables_scrollHead table { border-bottom: 0; }
 
-#dyntable_wrapper .dataTables_filter {
+#required_course_dyntable_wrapper .dataTables_filter {
 		  position: static; padding: 10px; background: #eee; text-align: right; border-left: 1px solid #ccc;
 		  border-right: 1px solid #ccc; }
-#dyntable_info { border-top: 1px solid #ddd; }
-
+#required_course_dyntable_info { border-top: 1px solid #ddd; }
+#optional_course_dyntable_wrapper .dataTables_filter {
+		  position: static; padding: 10px; background: #eee; text-align: right; border-left: 1px solid #ccc;
+		  border-right: 1px solid #ccc; }
+#optional_course_dyntable_info { border-top: 1px solid #ddd; }
+#users_dyntable_wrapper .dataTables_filter {
+		  position: static; padding: 10px; background: #eee; text-align: right; border-left: 1px solid #ccc;
+		  border-right: 1px solid #ccc; }
+#users_dyntable_info { border-top: 1px solid #ddd; }
 
 /*** GRAPHS & CHARTS ***/
 
