--- a/app/views/admin/admin/course.html.erb
+++ b/app/views/admin/admin/course.html.erb
@@ -42,8 +42,7 @@
               </ul>
               <a href="<%= course_path(c) %>" class="btn btn-primary btn-small"><span class="iconfa-info-sign icon-white"></span> <%= t("course.all.details") %></a>
               <a href="/ajax/form/courses/edit/<%= c.id %>" class="btn btn-warning btn-small"
-                  title="编辑课程"  data-id="<%= c.id %>" data-target="#quick_form" data-toggle="modal" 
-                  modal-type-edit="course">
+                  title="编辑课程"  data-id="<%= c.id %>"  modal-type="course">
                 <span class="iconfa-edit icon-white"></span> 编辑课程
               </a>
             </div>
@@ -61,7 +60,7 @@
 
     <div class="well">
       <a title="<%= t("course.all.new") %>" modal-type="course" prefix="/users/<%=current_user.id %>"
-        data-target="#quick_form" data-toggle="modal" href="/ajax/form/courses/new" class="btn btn-primary">
+          href="/ajax/form/courses/new" class="btn btn-primary">
         <i class="iconfa-plus icon-white"></i> <%= t("course.all.new") %>
       </a>
       <a href="#myModal" data-toggle="modal" class="btn btn-warning"><i class="iconfa-download-alt icon-white"></i> <%= t("course.all.export") %></a>
