--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -57,7 +57,7 @@
   <div id="dashboard-right" class="span4">
     <div class="well">
       <a title="<%= t("course.all.new") %>" modal-type="course" prefix="/users/<%=current_user.id %>"
-        data-target="#quick_form" data-toggle="modal" href="/ajax/form/courses/new" class="btn btn-primary">
+          href="/ajax/form/courses/new" class="btn btn-primary">
       <!--a href="<%= new_user_course_path(current_user) %>" class="btn btn-primary"-->
         <i class="iconfa-plus icon-white"></i><%= t("course.all.new") %>
       </a>
