--- a/app/views/examinations/index.html.erb
+++ b/app/views/examinations/index.html.erb
@@ -41,8 +41,8 @@
   <div id="dashboard-right" class="span4">
     <% if current_user.admin? %>
     <div class="well">
-      <a title="创建新考试" modal-type="examination" data-target="#quick_form" 
-        data-toggle="modal" href="/ajax/form/examinations/new" class="btn btn-primary">
+      <a title="创建新考试" modal-type="examination"
+          href="/ajax/form/examinations/new" class="btn btn-primary">
         <i class="iconfa-plus icon-white"></i> 创建新考试
       </a>
     </div>
