Change new comments css class. Add CN language for datatable.

--- a/app/assets/stylesheets/courses.css.scss
+++ b/app/assets/stylesheets/courses.css.scss
@@ -160,6 +160,12 @@ blockquote {
   }
 }
 
+.quest-input {
+  form {
+    margin-left: 50px;
+  }
+}
+
 ul.course-class-attachment {
   padding: 10px 15px;
 
