--- a/app/views/comments/_new_comment.html.erb
+++ b/app/views/comments/_new_comment.html.erb
@@ -1,6 +1,6 @@
 
 <%= image_tag user_avatar_path(current_user, :small) %>
-<div class='well quest-input'>
+<div class='quest-input'>
   <%= simple_form_for Comment.new, :url => comments_path, :method => :post do |f| %>
     <%= f.input :content, :as => :text, :input_html => { :cols => 50, :rows => 3 }, :placeholder => "发表评论...", :label => false %>
     <%= f.hidden_field :user_id, :value => current_user.id %>
