--- a/app/assets/stylesheets/contracts.css.scss
+++ b/app/assets/stylesheets/contracts.css.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the contracts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#contractModel-1 {
+  width: 560px;
+  margin-left: -280px;
+}
+
+#contractModel-2 {
+  width: 560px;
+  margin-left: -280px;
+}
