--- a/app/views/contracts/show.html.erb
+++ b/app/views/contracts/show.html.erb
@@ -1,8 +1,8 @@
 <% provide(:title, current_user.is_admin? ? "合同管理" : "我的合同") %>
 
 <% content_for :breadcrumbs do %>
-<li><%= current_user.is_admin? ? "合同管理" : "我的合同" %></li>
-<%= content_tag(:li, @contract.contract_id) %>
+<li><%= link_to current_user.is_admin? ? "合同管理" : "我的合同", contracts_path %> <span class="separator"></span></li>
+<%= content_tag(:li, "合同：" + @contract.contract_id) %>
 <% end %>
 
 <% content_for :javascript do %>
@@ -13,78 +13,211 @@
 <div class="row-fluid">
   <div id="dashboard-left" class="span8">
     <h4 class="widgettitle"> 合同详细信息</h4>
-    <table class="table table-striped table-bordered responsive">
-      <thead>
-        <tr>
-          <th class="center">合同编号</th>
-          <th class="center">人天量</th>
-          <th class="center">班天量</th>
-          <th class="center">合同项目数量</th>
-          <th class="center">完成进度</th>
-          <th class="center">签定时间</th>
-          <th class="center">签定人</th>
-          <th class="center">合同金额</th>
-        </tr>
-      </thead>
+    <table class="table table-bordered responsive">
+      <colgroup>
+        <col class="con1" />
+        <col class="con0" />
+        <col class="con1" />
+        <col class="con0" />
+      </colgroup>
+      
       <tbody>
         
         <tr>
-          <td class="center"><%= link_to c.contract_id, contract_path(index) %></td>
-          <td class="center"><%= c.man_per_day %></td>
-          <td class="center"><%= c.class_per_day %></td>
-          <td class="center"><%= c.courses.count %></td>
-          <td class="center"><%= c.finished_course_number %></td>
-          <td class="center"><%= c.sign_date %></td>
-          <td class="center"><%= link_to c.user.name, user_path(c.user.id) %></td>
-          <td class="center"><%= c.price %></td>
+          <td>合同编号</td>
+          <td><%= @contract.contract_id %></td>
+          <td>项目名称</td>
+          <td>中国移动广西公司2013年度数据培训</td>
+        </tr>  
+        <tr>
+          <td>人天量</td>
+          <td><%= @contract.man_per_day %></td>
+          <td>班天量</td>
+          <td><%= @contract.class_per_day %></td>
         </tr>
-
+        <tr>
+          <td>合同项目数</td>
+          <td><%= @contract.courses.count %></td>
+          <td>完成度</td>
+          <td><%= (@contract.finished_course_number * 10).to_s + "%" %></td>
+          </tr>
+        <tr>
+          <td>签订时间</td>
+          <td><%= @contract.sign_date %></td>
+          <td>签订人</td>
+          <td><%= link_to @contract.user.name, user_path(@contract.user.id) %></td>
+        </tr>
+        <tr>
+          <td>用户类型</td>
+          <td>总部</td>
+          <td>数据拥有者</td>
+          <td>HQ</td>
+        </tr>
+        <tr>
+          <td>客户单位</td>
+          <td>中国移动广西有限公司</td>
+          <td>培训对象</td>
+          <td>客户</td>
+        </tr>
+        <tr>
+          <td>合同类型</td>
+          <td>服务合同</td>
+          <td>合同统计部门</td>
+          <td>南宁办</td>
+        </tr>
+        <tr>
+          <td>币种</td>
+          <td>CNY</td>
+          <td>合同金额</td>
+          <td><%= @contract.price %></td>
+        </tr>
+        <tr>
+          <td>是否虚拟合同</td>
+          <td>否</td>
+          <td>是否涉及借贷冲销</td>
+          <td>不涉及</td>
+        </tr>
+        <tr>
+          <td>备注</td>
+          <td colspan="3"></td>
+        </tr>
+        <tr>
+          <td>附件</td>
+          <td colspan="3"></td>
+        </tr>
       </tbody>
     </table>
-    <div class="pagination">
-      <ul>
-        <li class="active"><a href="#">1</a></li>
-        <li><a href="#">2</a></li>
-        <li><a href="#">3</a></li>
-        <li><a href="#">4</a></li>
-        <li><a href="#">5</a></li>
-        <li><a href="#">下一页</a></li>
-        <li><a href="#">末页</a></li>
+
+    <div class="divider15"></div>
+    <% if current_user.is_admin? %>
+    <div class="well tp-details">
+      <h4 id='tp-header'>合同项目（<%= @contract.courses.count %>）</h4>
+      <ul class="tp-course-list">
+        <% @contract.courses.each_with_index do |c, index| %>
+        <li>
+          <%= image_tag course_cover_path(c, :small) %>
+          <a href="<%= new_course_class_path(c) %>" class="btn btn-warning btn-small action">开设班级</a>
+          <div class='tp-course-info'>
+            <%= link_to content_tag(:h4, c.title), course_path(c) %>
+            <span>
+              <% if index == 2 %>
+                已开设班级：2
+              <% else %>
+                已开设班级：<%= c.course_classes.active.count %>
+              <% end %>
+            </span>
+          </div>
+        </li>
+        <% end %>
       </ul>
-    </div><!--pagination-->
+    </div>
+    <% else %>
+    <div class="well tp-details">
+      <h4 id='tp-header'>合同项目（<%= @contract.courses.count %>）</h4>
+      <ul class="tp-course-list">
+        <% @contract.courses.each_with_index do |c, index| %>
+        <li>
+          <%= image_tag course_cover_path(c, :small) %>
+          <% if index == 2 %>
+          <a href="#contractModel-1" role="button" class="btn btn-success btn-small action" data-toggle="modal">立即报名</a>
+          <% else %>
+          <a href="#contractModel-2" role="button" class="btn btn-primary btn-small action" data-toggle="modal">申请开班</a>
+          <% end %>
+          <div class='tp-course-info'>
+            <%= link_to content_tag(:h4, c.title), course_path(c) %>
+            <span>
+              <% if index == 2 %>
+                已开设班级：2
+              <% else %>
+                已开设班级：<%= c.course_classes.active.count %>
+              <% end %>
+            </span>
+          </div>
+        </li>
+        <% end %>
+      </ul>
+    </div>
+    <% end %>
+    
   </div>
+
   <div id="dashboard-right" class="span4">
     <div class="well">
       <a title="创建新合同" href="#" class="btn btn-primary">
-      <!--a href="<%= new_user_course_path(current_user) %>" class="btn btn-primary"-->
-        <i class="iconfa-plus icon-white"></i> 创建新合同
+        <i class="iconfa-edit icon-white"></i> 修改合同信息
       </a>
     </div>
 
-    <div class="divider15"></div>
-    <h4 class="widgettitle"> <%=t("course.all.filter") %></h4>
-    <div class="widgetcontent">
-      <form action="#" method="post">
+  </div>
+
+  <!-- Modal -->
+  <div id="contractModel-1" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+      <h3 id="myModalLabel">班级报名</h3>
+    </div>
+    <div class="modal-body">
+      <form class="" action="#" method="post">
         <fieldset>
-          <label>合同编号</label>
-          <input type="text" name="input1" class="span8" placeholder="输入合同编号" />
-          <label>客户</label>
-          <input type="text" name="input1" class="span8" placeholder="" />
-          <label>培训类型</label>
-          <input type="text" name="input1" class="span8" placeholder="" />
-          <label>交付进度</label>
-          <input type="text" name="input1" class="span4" placeholder="" />
-          ~ <input type="text" name="input1" class="span4" placeholder="" />
-          <label>签订时间（起止时间）</label>
-          <input type="text" name="input1" class="span4" placeholder="" />
-          ~ <input type="text" name="input1" class="span4" placeholder="" />
-                    
-          <p>
-            <%= submit_tag "筛选合同", :class => "btn btn-primary" %>
-            <%= link_to t("course.all.clear_filter"),  "#" %>
-          </p>
+          <div class="control-group">
+            <label class="control-label" for="inputEmail">参培人员：</label>
+            <div class="controls">
+              <input type="text" id="inputEmail" value="赵晓育">
+              <input type="text" id="inputEmail" value="13018009238">
+              <a title="删除" href="#" class="">
+                <i class="iconfa-times icon-white"></i> 删除
+              </a>
+            </div>
+            <div class="controls">
+              <input type="text" id="inputEmail" value="周坤">
+              <input type="text" id="inputEmail" value="18693820993">
+              <a title="删除" href="#" class="">
+                <i class="iconfa-times icon-white"></i> 删除
+              </a>
+            </div>
+            <div class="controls">
+              <input type="text" id="inputEmail" placeholder="姓名">
+              <input type="text" id="inputEmail" placeholder="联系方式">
+            </div>
+          </div>
+          <a title="创建新合同" href="#" class="btn btn-primary btn-small">
+            <i class="iconfa-plus icon-white"></i> 继续添加
+          </a>
         </fieldset>
       </form>
+    </div>
+    <div class="modal-footer">
+      <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
+      <button class="btn btn-primary">确认报名</button>
+    </div>
+  </div>
+
+  <div id="contractModel-2" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+      <h3 id="myModalLabel">申请开班</h3>
+    </div>
+    <div class="modal-body">
+      <form class="" action="#" method="post">
+        <fieldset>
+          <div class="control-group">
+            <label class="control-label" for="inputEmail">培训日期：</label>
+            <div class="controls">
+              <input type="text" id="inputEmail" placeholder="格式：YYYY/MM/DD">
+            </div>
+          </div>
+          <div class="control-group">
+            <label class="control-label" for="inputEmail">培训人数：</label>
+            <div class="controls">
+              <input type="text" id="inputEmail" placeholder="">
+            </div>
+          </div>    
+        </fieldset>
+      </form>
+    </div>
+    <div class="modal-footer">
+      <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
+      <button class="btn btn-primary">提交申请</button>
     </div>
   </div>
 </div>
